--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <h1>Welcome</h1>
   <button type="button" class="btn btn-primary" (click)="myFunc()">Primary</button>
 </div>
-
+<app-form></app-form>
 <router-outlet></router-outlet>
