--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div class="container">
-  <h1>Welcome</h1>
-  <button type="button" class="btn btn-primary" (click)="myFunc()">Primary</button>
-</div>
+<app-header></app-header>
 <app-form></app-form>
 <router-outlet></router-outlet>
