--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,22 +1,20 @@
 <body>
-    <div class="container-fluid h-90" id="login">
-        <div class="row h-100 justify-content-right align-items-center mx-5 text-center"> 
-            <div>
-                <h1 class="title">Bienvenido</h1>
-                <h2 class="description">Enseña todo lo que sabes y aprende al tiempo</h2>
-            </div>       
-            <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="ml-auto p-5 mr-5 w-30 h-70 text-center my-auto">
-                <div clas="h-50 my-5">
-                    <h2 class="text-white mt-5">Iniciar Sesión</h2>
-                    <hr>
-                    <div class="form-group mx-sm-3 mb-2">
-                        <label for="email" class="sr-only">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Correo Electrónico" formControlName="email">
-                    </div>
-                    
-                </div>
+    <div class="container-fluid" id="cont1">
+        <div class="dropdown-menu">
+            <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="px-4 py-3">
+              <div class="form-group">
+                <label for="email">Correo Electrónico</label>
+                <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="correo@example.com">
+              </div>
+              <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Contraseña">
+              </div>
+                <button type="submit" class="btn btn-primary">Ingresar</button>
             </form>
-        </div>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Registrate</a>
+          </div>
     </div>
 </body>
     
