Full create tutoria

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -13,7 +13,7 @@
     
     <div class="form-group">
       <label for="exampleFormControlSelect1">Materia</label>
-      <select class="form-control" id="exampleFormControlSelect1">
+      <select class="form-control" formControlName="materia">
         <option>Calculo</option>
         <option>Biologia</option>
         <option>Programacion</option>
@@ -22,19 +22,19 @@
     </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Descripcion</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea class="form-control"  rows="3" formControlName="descripcion"></textarea>
     </div>
     <div class="form-group">
       <label for="exampleFormControlInput1">Costo</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1">
+      <input type="text" class="form-control"   formControlName="cupos" >
     </div>
     <div class="form-group">
       <label for="exampleFormControlInput1">Id tutor</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1">
+      <input type="text" class="form-control" formControlName="idtutor">
     </div>
     <div class="form-group">
       <label for="exampleFormControlInput1">Id token</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1">
+      <input type="text" class="form-control" formControlName="idtoken">
     </div>
     <input type="submit">
     
