--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,20 +1,24 @@
 <body>
     <div class="container-fluid" id="cont1">
-        <div class="dropdown-menu">
-            <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="px-4 py-3">
-              <div class="form-group">
-                <label for="email">Correo Electrónico</label>
-                <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="correo@example.com">
-              </div>
-              <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Contraseña">
-              </div>
-                <button type="submit" class="btn btn-primary">Ingresar</button>
-            </form>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Registrate</a>
-          </div>
+        <div class="container-fluid" id="cont2">            
+            <div class="container-fluid" id="cont3">                
+                <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="px-4 py-3">
+                <div class="form-group">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="correo@example.com" formControlName="email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Contraseña" formControlName="password">
+                </div>
+                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                </form>
+            </div>
+            <div class="container-fluid" id="cont4">
+                <h1 id="bienvenido">Bienvenido a UNtutor!!!</h1>
+                <br>
+                <h1>Aqui tendrás la oportunidad de ser profe y estudiante al tiempo</h1>
+            </div>
+        </div>
     </div>
 </body>
-    
