--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -5,19 +5,24 @@
                 <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="px-4 py-3">
                 <div class="form-group">
                     <label for="email">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="correo@example.com" formControlName="email">
+                    <input type="email" class="form-control" placeholder="correo@example.com" formControlName="email">
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
-                    <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Contraseña" formControlName="password">
+                    <input type="password" class="form-control" placeholder="******" formControlName="password">
                 </div>
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                <button type="submit" class="btn btn-primary">Ingresa</button>
+                <a href="sign-up" class="btn btn-primary">Registrate</a>
                 </form>
+
+                <!-- implementar para captura de datos -->
+                <!-- <div> {{ listJson }} </div> -->
+
             </div>
             <div class="container-fluid" id="cont4">
                 <h1 id="bienvenido">Bienvenido a UNtutor!!!</h1>
                 <br>
-                <h1>Aqui tendrás la oportunidad de ser profe y estudiante al tiempo</h1>
+                <h1>Aqui tendrás la oportunidad de ser profe y estudiante al mismo tiempo</h1>
             </div>
         </div>
     </div>
