--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -3,24 +3,30 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 844px; 
-    /*border: 2px solid black;*/
+    border: 2px solid black;
     padding: 25px;   
 }
 
 #cont2 {
-    /*border: 2px solid blue;*/
+    border: 2px solid blue;
     height: 80%;
+    /*align-content: center;*/
 }
 
 #cont3 {
-    /*border: 2px solid yellow;*/
+    border: 2px solid yellow;
     float: right;
     width: 40%;
     margin-top: 60px;
+    text-align: center;
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
 }
 
 #cont4 {
-    /*border: 2px solid red;*/
+    border: 2px solid red;
     float: left;
     width: 40%;
     height: 50%;
