Some fixed and minor changes

--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -12,7 +12,7 @@
                     <input type="password" class="form-control" placeholder="******" formControlName="password">
                 </div>
                 <button type="submit" class="btn btn-primary">Ingresa</button>
-                <a href="sign-up" class="btn btn-primary">Registrate</a>
+                <a routerLink="/sign-up" class="btn btn-primary">Registrate</a>
                 </form>
 
                 <!-- implementar para captura de datos -->
