--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 844px; 
-    border: 2px solid black;
+    /*border: 2px solid black;*/
     padding: 25px;   
 }
 
@@ -18,11 +18,7 @@
     float: right;
     width: 40%;
     margin-top: 60px;
-    text-align: center;
-    position: absolute;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
+    
 }
 
 #cont4 {
