--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -26,6 +26,11 @@
                     <button type="submit" class="btn btn-primary">Registrate</button>
                 </form>
             </div>
+            <div class="container-fluid" id="cont4">
+                <h1 id="bienvenido">Bienvenido a UNtutor!!!</h1>
+                <br>
+                <h1>Aqui tendrás la oportunidad de ser profe y estudiante al mismo tiempo</h1>
+            </div>
         </div>
     </div>
 </body>
