--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -2,7 +2,8 @@
     background: url("/assets/clase2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 844px; 
+    height: auto;
+
     /*border: 2px solid black;*/
     padding: 25px;   
 }
