--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
         </li>
       </ul>
       <span class="navbar-text">
-        Perfil
+        {{name}}
       </span>
     </div>
   </nav>
