--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,8 +1,8 @@
+<app-header></app-header>
 <body>
   <div class="container-fluid" id="cont1">
     <div class="container-fluid" id="cont2">            
       <div class="container-fluid" id="cont3">
-        <app-image></app-image>      
         <div class="circulo" >
           <img src={{image}} alt="Foto de perfil" class="img">
         </div>
