--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <a class="navbar-brand" (click)="clean()" href="#">UNtutor</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,10 +9,11 @@
           <a class="nav-link" href="#">Como funciona <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <button (click)="clean()" href="#">Cerrar Sesion!</button>
-      <app-image></app-image>      
+      <button (click)="clean()" routerLink="/sign-in" class="btn btn-danger">Cerrar Sesion!</button>
       <span class="navbar-text">
         {{nombre}}
       </span>
+      <app-image></app-image>      
+      
     </div>
   </nav>
