--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <a class="navbar-brand" (click)="clean()" href="#">UNtutor</a>
+
+  <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+    <a class="navbar-brand">UNtutor</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Como funciona <span class="sr-only">(current)</span></a>
+          <a class="nav-link" >Como funciona <span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <button (click)="clean()" routerLink="/sign-in" class="btn btn-danger">Cerrar Sesion!</button>
@@ -16,4 +18,6 @@
       <app-image></app-image>      
       
     </div>
+  </div>
   </nav>
+
