--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -2,9 +2,9 @@
     background: url("/assets/clase2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 844px; 
+    height: 100vh;
     /*border: 2px solid black;*/
-    padding: 25px;   
+    padding: 25px;  
 }
 
 #cont2 {
