ajuste imagen de inicio y registro se sesión con estilos adicionales

--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -1,9 +1,12 @@
-#cont1 {
+#fondo{
     background: url("/assets/clase2.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
-    height: auto;
+    background-repeat: repeat;
+}
 
+#cont1 {
+    /*height: auto;*/
+    height: 844px;
     /*border: 2px solid black;*/
     padding: 25px;   
 }
@@ -21,6 +24,12 @@
 }
 
 #cont4 {
+    /*border: 2px solid deeppink;*/
+    width: 60%;
+    height: 50%;    
+}
+
+#cont5 {
     /*border: 2px solid red;*/
     float: left;
     width: 40%;
@@ -30,4 +39,8 @@
 
 .btn{
     margin: 0 0 0 15px
+}
+
+#bienvenido{
+    font-size: 70px;
 }
