--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -1,7 +1,10 @@
-#cont1 {
+#fondo{
     background: url("/assets/clase2.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
+}
+
+#cont1 {
     height: 844px; 
     /*border: 2px solid black;*/
     padding: 25px;   
@@ -22,9 +25,20 @@
 }
 
 #cont4 {
+    /*border: 2px solid deeppink;*/
+    width: 70%;
+    height: 50%;
+    text-align: center;
+}
+
+#cont5 {
     /*border: 2px solid red;*/
     float: left;
     width: 40%;
     height: 50%;
     margin-top: 60px;
+}
+
+#bienvenido{
+    font-size: 70px;
 }
