--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<body>
+<body id="fondo">
     <div class="container-fluid" id="cont1">
         <div class="container-fluid" id="cont2">            
             <div class="container-fluid" id="cont3">                
@@ -22,11 +22,13 @@
                     <div class="form-group">
                             <label for="password">Confirma tu Contraseña</label>
                             <input type="password" class="form-control" placeholder="******" formControlName="password_confirmation">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Registrate</button>
+                    </div>                    
+                    <div class="container-fluid" id="cont4">
+                        <button type="submit" class="btn btn-primary">Confirmar registro</button>
+                    </div>                    
                 </form>
             </div>
-            <div class="container-fluid" id="cont4">
+            <div class="container-fluid" id="cont5">
                 <h1 id="bienvenido">Bienvenido a UNtutor!!!</h1>
                 <br>
                 <h1>Aqui tendrás la oportunidad de ser profe y estudiante al mismo tiempo</h1>
