--- a/src/app/components/image/image.component.html
+++ b/src/app/components/image/image.component.html
@@ -16,7 +16,7 @@
 
 <div class="dropdown ">
         <button class="circulo btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img  src={{urlimage}} alt="Foto" class="img" >
+            <img src={{urlimage}}>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item">Ver Perfil</a>
