Tutorias ofrecidas y cambios

--- a/src/app/components/form2/form2.component.html
+++ b/src/app/components/form2/form2.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
+<br>
 <div class="text-center">
-  <h1>Crear tutoria</h1>
+  <h2>Seleccionar Horarios</h2>
 </div>
   
   <form [formGroup]="horario" (ngSubmit)="onSubmit()">
