--- a/src/app/components/image/image.component.css
+++ b/src/app/components/image/image.component.css
@@ -2,9 +2,6 @@
     width: 60px;
     height: 60px;
     border-radius: 100% ;
+    background-color: gray;
 }
-.circulo > .img{
-    width: 100%;
-    height: 100%;
-    border-radius: 100% ;
-}
+
