--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <body id="cont1">
   <div class="container-fluid text-center">       
-      <div class="center circulo" >
-            <img  src={{urlimage}} >
+      <div class="center" >
+            <img  src={{image}} class="circulo">
       </div>
       <div >
         <span class="navbar-text"> <b>Nombre:</b>  {{ nombre }} </span><br>
